fix spacing

--- a/source/sass/blocks/section-basequipment.scss
+++ b/source/sass/blocks/section-basequipment.scss
@@ -138,7 +138,7 @@
 .basequipment__category {
   flex-basis: 100%;
   margin-bottom: 9px;
-  min-height: 340px;
+  min-height: 300px;
 
   @media (min-width: $small-desktop-width) {
     flex-basis: 31.25%;
